--- a/src/style.css
+++ b/src/style.css
@@ -48,41 +48,59 @@ html {
 .header__parrots-count::before {
   content: url('images/light-parrot.svg');
   align-self: center;
-  margin-right: 10px;
+  margin-right: 1.3%;
 }
-.background__avatar{
-    width: 52px;
-    height: 52px;
+.background{
+    position:absolute;
+    margin-left:7.1%;
+    margin-top:42.5%;
+    height:7.2%;
+    width:92.9%;
+    vertical-align:central;
+}
+.background__avatar {
+    position: relative;
+    width: 3.4%;
+    height: 3.7%;
     stroke: #979797;
-    align-content:center;
-
+    align-content: center;
 }
-.background__text{
-    left: 180px;
-    top: 624px;
-    width: 514px;
-    height: 52px;
+
+.background__text {
+    position: relative;
+    margin-left: 4%;
+    width: 88%;
+    height: 100%;
+    
     fill: rgba(255,255,255,0.5);
 }
-.background__send{
-    left:718px;
-    right:635px;
-    width:32px;
-    height:30px;
+#text{
+    position:relative;
+    width:100%;
+    height: 100%;
+}
+.background__send {
+    position: relative;
+    margin-left: 95%;
+    margin-top: -3.75%;
+    width: 2.1%;
+    height: 100%;
+    
     fill: rgba(0,0,0,0.54);
-
+}
+#img__send{
+    position:relative;
+    height:100%;
 }
 #table__avatars{
-    width:34px;
+    width:2.2%;
     stroke: #979797;
     align-content:center;
 }
 #table__messages {
-    left: 126px;
-    top: 116px;
-    width: 570px;
+    margin-left: 8.2%;
+    margin-top: 8.2%;
+    width: 37.3%;
     font-family: IBM Plex Sans Font Style;
     font-size: 14px;
-    
-    
 }
