--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ html {
   margin-right: 1.3%;
 }
 .background{
-    position:absolute;
+    position:fixed;
     margin-left:7.1%;
     margin-top:42.5%;
     height:7.2%;
@@ -60,18 +60,22 @@ html {
 }
 .background__avatar {
     position: relative;
-    width: 3.4%;
-    height: 3.7%;
+    margin-left:0%;
+    
+    height:100%;
     stroke: #979797;
-    align-content: center;
+   
 }
-
+#avatar {
+    position: relative;
+    height: 100%;
+}
 .background__text {
     position: relative;
-    margin-left: 4%;
-    width: 88%;
+    margin-left: 6%;
+    width: 86%;
     height: 100%;
-    
+    margin-top: -3.75%;
     fill: rgba(255,255,255,0.5);
 }
 #text{
@@ -91,11 +95,6 @@ html {
 #img__send{
     position:relative;
     height:100%;
-}
-#table__avatars{
-    width:2.2%;
-    stroke: #979797;
-    align-content:center;
 }
 #table__messages {
     margin-left: 8.2%;
